de-linted code: http://www.jslint.com/

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <html>
   <body>
-	  <h1>DNA</h1>
+    <h1>Rosalind</h1>
+    <ul>
+      <li>My Profile: <a href="http://rosalind.info/users/agilous/">http://rosalind.info/users/agilous/</a></li>
+      <li>Github Repo: <a href="https://github.com/agilous/rosalind">https://github.com/agilous/rosalind</a></li>
+    </ul>
+	  <h2>DNA</h2>
 	  <p>A rapid introduction to molecular biology: <a href="http://rosalind.info/problems/dna/" target="_top">http://rosalind.info/problems/dna/</a></p>
-	<script src="dna.js"> </script>
+    <p>Solution: <span id="dna-solution"></span></p>
 
-    <h1>RNA</h1>
+    <h2>RNA</h2>
     <p>The second nucleic acid: <a href="http://rosalind.info/problems/rna/" target="_top">http://rosalind.info/problems/rna/</a></p>
-    <script src="rna.js"> </script>
+    <p>Solution: <span id="rna-solution"></span></p>
 
-    <h1>Reverse Compliment</h1>
+    <h2>Reverse Compliment</h2>
     <p>The secondary and tertiary structure of DNA: <a href="http://rosalind.info/problems/revc/" target="_top">http://rosalind.info/problems/revc/</a></p>
+    <p>Solution: <span id="revc-solution"></span></p>
+
+    <script src="dna.js"> </script>
+    <script src="rna.js"> </script>
     <script src="revc.js"> </script>
   </body>
 </html>
