GC content solution

--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     <p>The secondary and tertiary structure of DNA: <a href="http://rosalind.info/problems/revc/" target="_top">http://rosalind.info/problems/revc/</a></p>
     <p>Solution: <span id="revc-solution"></span></p>
 
-    <script src="dna.js"> </script>
-    <script src="rna.js"> </script>
-    <script src="revc.js"> </script>
+    <h2>GC Content</h2>
+    <p>Identifying Unknown DNA Quickly: <a href="http://rosalind.info/problems/gc/" target="_top">http://rosalind.info/problems/gc/</a></p>
+    <p>Solution: <span id="gc-solution"></span></p>
+
+    <script src="dna.js"></script>
+    <script src="rna.js"></script>
+    <script src="revc.js"></script>
+    <script src="gc.js"></script>
   </body>
 </html>
