Hamming distance solution

--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
     <p>Identifying Unknown DNA Quickly: <a href="http://rosalind.info/problems/gc/" target="_top">http://rosalind.info/problems/gc/</a></p>
     <p>Solution: <span id="gc-solution"></span></p>
 
+    <h2>Hamming Distance</h2>
+    <p>Evolution as a Sequence of Mistakes: <a href="http://rosalind.info/problems/hamm/" target="_top">http://rosalind.info/problems/hamm/</a></p>
+    <p>Solution: <span id="hamm-solution"></span></p>
+
     <script src="dna.js"></script>
     <script src="rna.js"></script>
     <script src="revc.js"></script>
     <script src="gc.js"></script>
+    <script src="hamm.js"></script>
   </body>
 </html>
