--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
     <p>Evolution as a Sequence of Mistakes: <a href="http://rosalind.info/problems/hamm/" target="_top">http://rosalind.info/problems/hamm/</a></p>
     <p>Solution: <span id="hamm-solution"></span></p>
 
+    <h2>Motifs</h2>
+    <p>Combing Through the Haystack: <a href="http://rosalind.info/problems/subs/" target="_top">http://rosalind.info/problems/subs/</a></p>
+    <p>Solution: <span id="subs-solution"></span></p>
+
     <script src="dna.js"></script>
     <script src="rna.js"></script>
     <script src="revc.js"></script>
     <script src="gc.js"></script>
     <script src="hamm.js"></script>
+    <script src="subs.js"></script>
   </body>
 </html>
